@@ -1,11 +1,14 @@
 buildscript {
+    ext {
+        kotlin_version = '1.7.22'
+    }
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+        classpath "com.android.tools.build:gradle:7.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,20 +17,19 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 }
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -50,6 +52,7 @@ android {
                             //"-O1",                  // Minimal optimize. (-Wuninitialized requires -O1)
                                                     // Change to -O0 if you're having trouble debugging
                             "-Wall", "-Wextra",     // warnings
+                            "-Wno-unknown-pragmas", // ignore, e.g., clang-tidy annotations
 
                             "-Wuninitialized",      // requires -O1 or above, but doesn't seem to work anyway
                             "-Wmissing-field-initializers",
@@ -61,6 +64,21 @@ android {
                             "-Wno-sign-compare",
                             "-Wno-missing-braces",
                             "-Wno-null-pointer-arithmetic"
+                    }
+                }
+            }
+            devRelease {
+                debuggable true
+                jniDebuggable true
+                ndk {
+                    abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
+                    debuggable true
+                }
+                externalNativeBuild {
+                    cmake {
+                        cppFlags "-O2", "-DNDEBUG=1",
+                                "-DCMAKE_BUILD_TYPE=Release",
+                                "-DWK_MIN_LOG_LEVEL=WKLogLevel::Verbose"
                     }
                 }
             }
@@ -104,21 +122,35 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+    lintOptions {
+        //disable 'TypographyFractions','TypographyQuotes'
+        //enable 'RtlHardcoded', 'RtlCompat', 'RtlEnabled'
+        //check 'NewApi', 'InlinedApi'
+        abortOnError false
+    }
+    testOptions {
+        reportDir "build/outputs/reports"
+        resultsDir "build/outputs/results"
+        unitTests {
+            all {
+                //jvmArgs '-XX:MaxPermSize=256m'
+                //if (it.name == 'testDebugUnitTest') {
+                //    systemProperty 'debug', 'true'
+                //}
+            }
+        }
+    }
     ndkVersion '21.3.6528147'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
-    implementation 'androidx.core:core-ktx:+'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
-    //implementation 'com.google.android.gms:play-services:12.0.1'
-    api 'com.google.android.gms:play-services-location:17.1.0'
-}
-repositories {
-    mavenCentral()
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api 'com.google.android.gms:play-services-location:18.0.0'
 }
